# docker-example

./: .gitignore  Dockerfile  README.md  app.py  create_table.py  docker-compose.yml  pyproject.toml  test.py
templates/: index.html
